# Pista

./: .gitignore  CMakeLists.txt  CMakeProject1.cpp  README.md
src/headerFiles/: IndexBuffer.h  Input.h  Renderer.h  Texture.h  VertexArray.h  VertexBuffer.h  View.h  shader.h
src/mesh/: sphere.cpp  sphere.h
src/shaders/: fragment.shader  vertex.shader
src/srcFiles/: IndexBuffer.cpp  Input.cpp  Renderer.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  View.cpp  main.cpp  shader.cpp
